tests/paczka1/fuzzy1/20221127.err
Error in line 3: 9VN S964 44,6
Error in line 14: 9VN A559 41,2
Error in line 23: 9VN S964 -1,8
Error in line 31: 9VN S899 67,7
